<resources>
    <string name="app_name">RRSS APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Recursos Humanos App</string>
    <string name="nav_header_subtitle">rrhh.app@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_empleados">Empleados</string>
    <string name="lbl_nombre_prueba">Alejando Diaz\n</string>
    <string name="lbl_dni_prueba">145620002369</string>
    <string name="lbl_imagen_eliminar">Boton de eliminar</string>
    <string name="lbl_imagen_empleado">Imagen de un empleado</string>
    <string name="planilla">Planilla</string>
    <string name="tool_nuevo_empleado">Crear nuevo empleado</string>
    <string name="lbl_dni">DNI</string>
    <string name="lbl_nombre_completo">Nombre completo</string>
    <string name="tv_departamento" >Departamento</string>
    <string name="tv_cargo">Cargo</string>
    <string name="tv_sexo">Sexo</string>
    <string name="lbl_masculino">Masculino</string>
    <string name="lbl_femenino">Femenino</string>
    <string name="lbl_salario">Salario base</string>
    <string name="lbl_guardar" >Guardar</string>
    <string name="lbl_btn_nuevo_empleado">Boton para agregar nuevo empleado</string>
    <string name="lbl_visualizar_estados">Visualizar:</string>
    <string name="btn_cerrar_modal">Boton de cerrar modal</string>
    <string name="boton_de_eliminar">Boton de eliminar</string>
    <string name="boton_de_habilitar_deshabilitar">Boton de habilitar/deshabilitar</string>
    <string name="boton_modificar">Boton de modificar</string>
    <string name="lbl_modal_dni">DNI: %S</string>
    <string name="lbl_nodal_nombre_completo">Nombre completo: </string>
    <string name="lbl_modal_departamento">Departamento: %S</string>
    <string name="lbl_modal_cargo">Cargo: %S</string>
    <string name="lbl_modal_sexo">Sexo: %S</string>
    <string name="lbl_modal_salario">Salario: %S</string>
    <string name="lbl_modal_estado">Estado: %S</string>
    <string name="lbl_imagen_de_un_cargo" />
    <string name="lbl_imagen_de_un_lupa" />
    <string name="lbl_btn_nuevo_cargo" />
    <string name="tool_nuevo_cargo">Crear nuevo cargo</string>
    <string name="app_title">Recursos Humanos App</string>
    <string name="crear_nuevo_departamento">Crear nuevo departamento</string>
    <string name="recursos_humanos_app">Recursos Humanos App</string>
    <string name="lbl_bievenidos">BIEVENIDOS A</string>
    <string name="campo_vacio">Este campo no puede quedar vacío</string>
    <string-array name="departamento_list">
        <item>Administración</item>
        <item>Gerencia</item>
        <item>IT</item>
        <item>Caja</item>
        <item>Bodega</item>
        <item>Limpieza</item>
        <item>Contabilidad</item>
        <item>Ventas</item>
    </string-array>

    <string-array name="cargo_list">
        <item>Administrador</item>
        <item>Gerente de area</item>
        <item>Gerente de venta</item>
        <item>Desarrollador</item>
        <item>Cajero</item>
        <item>Limpieza</item>
        <item>Contador</item>
        <item>Vendedor</item>
    </string-array>
    <string-array name="ver_estados_list">
        <item>Todos</item>
        <item>Solo activos</item>
        <item>Solo inactivos</item>
    </string-array>
</resources>