<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_400">>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/boton_de_eliminar"
            app:srcCompat="@drawable/eliminar" />

        <ImageView
            android:id="@+id/imgHabilitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/boton_de_habilitar_deshabilitar"
            app:srcCompat="@drawable/habilitar" />

        <ImageView
            android:id="@+id/imgModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/boton_modificar"
            app:srcCompat="@drawable/modificar" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="49dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/baseline_close_24"
        android:contentDescription="@string/btn_cerrar_modal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCerrar"
        app:layout_constraintVertical_bias="0.119">

        <ImageView
            android:id="@+id/imgEmpleadoModal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/lbl_imagen_empleado"
            app:srcCompat="@drawable/empleado" />

        <TextView
            android:id="@+id/tvModalDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            tools:text="DNI: 0412199900547" />

        <TextView
            android:id="@+id/tvModalNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            tools:text="Nombre completo:" />

        <TextView
            android:id="@+id/tvModalNombre1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            tools:text="DARIO JOSUE CASTRO MENJIVAR" />

        <TextView
            android:id="@+id/tvModalDepartamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            tools:text="Departamento: Gerencia" />

        <TextView
            android:id="@+id/tvModalCargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            tools:text="Cargo: Gerente de area" />

        <TextView
            android:id="@+id/tvModalSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            tools:text="Sexo: Masculino" />

        <TextView
            android:id="@+id/tvModalSalario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            tools:text="Salario: 20000" />

        <TextView
            android:id="@+id/tvModalEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            android:layout_marginBottom="40dp"
            tools:text="Estado: Inactivo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>